// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render with dark theme 1`] = `
.c0 {
  display: block;
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #f5f5f5;
}

<label
  class="c0"
  for="an-id"
>
  A label
</label>
`;

exports[`Label should render with light theme 1`] = `
.c0 {
  display: block;
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #333;
}

<label
  class="c0"
  for="an-id"
>
  A label
</label>
`;
